@@ -20,8 +20,8 @@
 #define APM_NAME		"APM"
 #define APM_DRIVER_NAME		"apm"
 #define APM_MAJOR_VERSION       1
-#define APM_MINOR_VERSION       0
-#define APM_PATCHLEVEL          1
+#define APM_MINOR_VERSION       1
+#define APM_PATCHLEVEL          0
 #ifndef PCI_CHIP_AT3D
 #define PCI_CHIP_AT3D	0x643D
 #endif
