@@ -1,3 +1,11 @@
+2006-04-06  Adam Jackson  <ajax@freedesktop.org>
+
+	* configure.ac:
+	* src/apm.h:
+	* src/apm_dga.c:
+	* src/apm_driver.c:
+	Unlibcwrap.  Bump server version requirement.  Bump to 1.1.0.
+
 2005-12-26  Adam Jackson  <ajax@freedesktop.org>
 
 	* src/apm_driver.c:
